--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/fabrezi/SHIP-DADDY#readme",
   "dependencies": {
     "axios": "^1.1.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "postgres": "^3.3.2",
     "sequelize": "^6.25.6"
