--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/fabrezi/SHIP-DADDY#readme",
   "dependencies": {
+    "@azure/msal-node": "^1.14.5",
     "axios": "^1.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
