--- a/.env
+++ b/.env
@@ -1,9 +1,2 @@
-#msal credentials
-Tenant_ID=
-Client_ID=
-Client_Secret=
-
-#msal endpoints
-AAD_endpoint=https://login.micrsoft.com
-graph_endpoint=https://graph.micrsoft.com
-graph_version=v1.0
+#PORT=
+#DB setup will go in here
