--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "http-server": "^14.1.1",
     "postgres": "^3.3.2",
     "sequelize": "^6.25.6"
   }
