--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/fabrezi/SHIP-DADDY#readme",
   "dependencies": {
+    "@angular/cli": "^17.0.10",
     "@azure/msal-node": "^1.14.5",
+    "angular": "^1.8.3",
     "axios": "^1.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
